# game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_research.md  build_from_scratch.md  launch.sh
doc/: final-project-instructions.md  final-project-rules.md  final-project-setup.md  software-patterns.md  tournament-instructions.md  tournament-rules.md  tournament-setup.md  tournament-structure.md
labs/lab4/: README.md  accel.csv  pos.csv  vel.csv
labs/lab4/src/: a_star2d.cc  a_star2d.h  depth_first_search2d.cc  depth_first_search2d.h  dijkstra2d.cc  dijkstra2d.h  examples.cc  full_stack_planning.cc  path_info.h  polynomial_planning.cc
launch/: launch.sh  launchGE.sh
resources/maps/: arena1.map  arena2.map  arena_empty.map  arena_empty_squeezed.map  forest.map  obj.py  platform.map  pretournament.map  temple.map  tournament.map  tournament2021.map  woods.map
resources/meshes/: balloon.stl
resources/template/: obstacle0.table  obstacle0.yaml  obstacle1.table  obstacle1.yaml  obstacle10.table  obstacle10.yaml  obstacle11.table  obstacle11.yaml  obstacle12.table  obstacle12.yaml  obstacle13.table  obstacle13.yaml  obstacle14.table  obstacle14.yaml  obstacle15.table  obstacle15.yaml  obstacle16.table  obstacle16.yaml  obstacle17.table  obstacle17.yaml  obstacle18.table  obstacle18.yaml  obstacle19.table  obstacle19.yaml  obstacle2.table  obstacle2.yaml  obstacle20.table  obstacle20.yaml  obstacle21.table  obstacle21.yaml  obstacle22.table  obstacle22.yaml  obstacle23.table  obstacle23.yaml  obstacle24.table  obstacle24.yaml  obstacle25.table  obstacle25.yaml  obstacle26.table  obstacle26.yaml  (+16 more)
run/: assetGames.yaml  config.rviz  params.yaml  paramsForest.yaml  paramsPlatform.yaml  paramsTemple.yaml  paramsTwoQuads.yaml  paramsTwoTeams.yaml  todd_params.yaml
src/: CMakeLists.txt
src/autonomy_protocol/: CMakeLists.txt  autonomy_protocol.h  example_autonomy_protocol.cc  example_autonomy_protocol.h  game_snapshot.cc  game_snapshot.h  occupancy_grid3d.cc  occupancy_grid3d.h  presubmission_trajectory_vetter.h  student_autonomy_protocol.cc  student_autonomy_protocol.h  student_game_engine_visualizer.cc  student_game_engine_visualizer.h
src/autonomy_protocol/aerial_robotics/: RunAstarPlusNumWaypointPolySolver.cc  RunAstarPlusNumWaypointPolySolver.h  a_star3d.cc  a_star3d.h  a_star3dA.cc  example_autonomy_protocol.cc  example_autonomy_protocol.h  example_autonomy_protocol_post-lecture.cc  example_autonomy_protocol_pre-lecture.cc  path_info.h  student_autonomy_protocol (copy).cc  student_autonomy_protocol.cc  student_autonomy_protocol.h  student_autonomy_protocol_m.cc  test.cc  testmap  testmap.cc
src/autonomy_protocol/aerial_robotics/default/: example_autonomy_protocol.h  example_autonomy_protocol_pre-lecture.cc
src/autonomy_protocol/aerial_robotics/mod/: student_autonomy_protocol.cc
src/autonomy_protocol/machine_games/: README.md  blue_team_autonomy_protocol.cc  blue_team_autonomy_protocol.h  manual_control_protocol.cc  manual_control_protocol.h  multi_quad_autonomy_protocol.cc  multi_quad_autonomy_protocol.h  red_team_autonomy_protocol.cc  red_team_autonomy_protocol.h
src/autonomy_protocol/machine_games/asset_games/: README.md  asset_games_protocol.cc  asset_games_protocol.h
src/autonomy_protocol/machine_games/asset_games/realtime_game_theoretic_planner/: CMakeLists.txt  capture_zone_plot.m  controller.h  cost_calculator.cpp  cost_calculator.h  future_combinator.cpp  future_combinator.h  game_state_future.h  helper.cpp  helper.h  main.cpp  matlab.mat  nash.cpp  nash.h  nash_controller.cpp  nash_controller.h  runtime_plot.m  sync_future.cpp  sync_future.h  thread_pool.cpp  thread_pool.h  time_hist_plot.m  vel_match_controller.cpp  vel_match_controller.h  velmatch.m
src/dependencies/: CMakeLists.txt
src/environment/: CMakeLists.txt  map2d.cc  map2d.h  map3d.cc  map3d.h  occupancy_grid2d.cc  occupancy_grid2d.h  occupancy_grid3d.cc  occupancy_grid3d.h
src/exe/: CMakeLists.txt  asset_games_protocol_main.cc  blue_team_autonomy_protocol_main.cc  example_autonomy_protocol.cc  example_autonomy_protocol_main.cc  manual_control_protocol_main.cc  mediation_layer.cc  mediation_layer_main.cc  multi_quad_autonomy_protocol_main.cc  physics_simulator.cc  physics_simulator_main.cc  red_team_autonomy_protocol_main.cc  student_autonomy_protocol.cc  student_autonomy_protocol_main.cc  ta_autonomy_protocol_main.cc  test_camera.cc  visualizer.cc  visualizer_main.cc
src/geometry/: line2d.cc  line2d.h  line3d.cc  line3d.h  linear_constraint2d.h  plane3d.cc  plane3d.h  polygon.cc  polygon.h  polyhedron.cc  polyhedron.h
src/graph/: directed_edge.h  graph.h  node.h  node_eigen.h
src/integration/: runge_kutta_4.h  time_span.h
src/mediation_layer/: CMakeLists.txt  balloon_status.h  balloon_watchdog.cc  balloon_watchdog.h  continuous_quad_monitor.cc  continuous_quad_monitor.h  goal_status.h  goal_watchdog.cc  goal_watchdog.h  mediation_layer.cc  mediation_layer.h  physics_simulator.cc  physics_simulator.h  quad_state.cc  quad_state.h  quad_state_dispatcher.cc  quad_state_dispatcher.h  quad_state_guard.cc  quad_state_guard.h  quad_state_watchdog.cc  quad_state_watchdog.h  quad_state_watchdog_status.cc  quad_state_watchdog_status.h  safety_monitor.cc  safety_monitor.h  safety_monitor_status.cc  safety_monitor_status.h  trajectory.cc  trajectory.h  trajectory_dispatcher.cc  trajectory_dispatcher.h  trajectory_vetter.cc  trajectory_vetter.h  trajectory_warden.cc  trajectory_warden.h  trajectory_watchdog.cc  trajectory_watchdog.h  trajectory_watchdog_status.cc  trajectory_watchdog_status.h  warden.cc  (+1 more)
src/mediation_layer/helper/: path_output.h  potential_field.cc  potential_field.h
src/ros/node/: CMakeLists.txt  balloon_position_publisher_node.cc  (+30 more)
src/util/: CMakeLists.txt  error_codes.h  quad_safety_status.h  revised_modes.h  semaphore.cc  semaphore.h  timer.cc  timer.h  trajectory_code.h  types.h  wind_intensity.h
test/: CMakeLists.txt  environment_tests.cc  geometry_tests.cc  graph_tests.cc  integration_tests.cc  mediation_layer_tests.cc
tmux/: README.md  stmux
(+14 files in other folders)
